# pv-control

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  chargecontrol.py  chargecontrol.yaml  pvcontrol.nginx  pvcontrol.py  pvcontrol.service  pvcontrol.yaml  pyproject.toml  relay.py  renovate.json  requirements-dev.txt  requirements.in  requirements.txt  update-pvcontrol.sh  wsgi.py
.github/instructions/: angular.instructions.md
.github/workflows/: docker-image.yml
pvcontrol/: __init__.py  __main__.py  api.py  app.py  car.py  chargecontroller.py  charger.py  dependencies.py  meter.py  mqtt.py  raspi_relay.py  relay.py  scheduler.py  service.py  utils.py  views.py  wallbox.py
tests/: solarwatt-devices.json  test_api.py  test_app.py  test_car.py  test_chargecontroller.py  test_charger.py  test_meter.py  test_mqtt.py  test_pvcontrol.py  test_relay.py  test_scheduler.py  test_views.py  test_wallbox.py
ui/: .browserslistrc  .eslintrc.json  angular.json  eslint.config.js  karma.conf.js  package-lock.json  package.json  proxy.conf.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
ui/src/: index.html  main.ts  styles.css  styles.scss  test.ts  themes.scss
ui/src/app/: app.component.css  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  charge-control.service.spec.ts  charge-control.service.ts  http-status.service.spec.ts  http-status.service.ts  pv-control.service.spec.ts  pv-control.service.ts
