[project]
name = "pvcontrol"
version = "0.1.0"
description = "Electric car charging controller for photovoltaic systems"
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICENSE"]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "aiodns==3.5.0",
    "aiohttp==3.12.15",
    "fastapi==0.118.0",
    "myskoda==2.4.2",
    "prometheus-client==0.23.1",
    "pymodbus==3.11.3",
    "pysma-plus==0.3.22.4",
    "rpi-gpio==0.7.1 ; ('arm' in platform_machine and 'linux' in sys_platform) or (platform_machine == 'aarch64' and 'linux' in sys_platform)",
    "uvicorn==0.37.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pyright]
include = ["pvcontrol"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E","F","W","B","C"]
ignore = ["E501","E402","C901"]
preview = true

[dependency-groups]
dev = [
    "pyright==1.1.406",
    "ruff==0.13.3",
    "httpx==0.28.1",
]
