[project]
name = "pvcontrol"
version = "0.1.0"
description = "Electric car charging controller for photovoltaic systems"
readme = "README.md"
requires-python = ">=3.14"
license-files = ["LICENSE"]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "aiodns==3.5.0",
    "aiohttp==3.13.2",
    "fastapi==0.120.2",
    "myskoda==2.4.3",
    "prometheus-client==0.23.1",
    "pymodbus==3.11.3",
    "pysma-plus==0.3.22.4",
    "rpi-gpio==0.7.1 ; ('arm' in platform_machine and 'linux' in sys_platform) or (platform_machine == 'aarch64' and 'linux' in sys_platform)",
    "uvicorn==0.38.0",
]

[dependency-groups]
dev = [
    "ruff==0.14.3",
    "httpx==0.28.1",
    "basedpyright==1.32.1",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E","F","W","B","C"]
ignore = ["E501","E402","C901"]
preview = true

[tool.basedpyright]
# BasedPyright currently seems like the best type checker option, much faster
# than mypy and with a good extension for VSCode/Cursor.
# https://marketplace.visualstudio.com/items?itemName=detachhead.basedpyright
# https://docs.basedpyright.com/latest/configuration/config-files/#sample-pyprojecttoml-file
include = ["pvcontrol", "tests"]
# By default BasedPyright is very strict, so you almost certainly want to disable
# some of the rules.
# First, these turn off warnings about (yes) how you ignore warnings:
# failOnWarnings = false
enableTypeIgnoreComments = true
# reportIgnoreCommentWithoutRule = false
# reportUnnecessaryTypeIgnoreComment = false
# A few typically noisy warnings are next.
# How many you enable is up to you. The first few are off by default, but you can
# comment/uncomment these as desired:
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
# reportImplicitStringConcatenation = false
# reportUnreachable = false
# reportImplicitOverride = false
# reportPrivateImportUsage = false
# reportPrivateLocalImportUsage = false
# reportMissingImports = false
# reportUnnecessaryIsInstance = false
# reportUnknownVariableType = false
# reportUnknownArgumentType = false
# reportUnknownMemberType = false
